fix: corrections compilation et tests — GitProperties, Ltree, ComputedComponent, StagingFinalizeSqlTest
Agent-Logs-Url: https://github.com/ptcherniati/openadom/sessions/c0048d59-479b-48be-8407-fedf63387972

Co-authored-by: ptcherniati <18171242+ptcherniati@users.noreply.github.com>